--- a/retrofit-springboot-autoconfigure/build.gradle
+++ b/retrofit-springboot-autoconfigure/build.gradle
@@ -1,1 +1,6 @@
-dependencies { }
+apply plugin: "groovy"
+
+dependencies {
+    testCompile('org.codehaus.groovy:groovy-all:2.4.7')
+    testCompile('org.spockframework:spock-core:1.1-groovy-2.4-rc-3')
+}
