--- a/retrofit-springboot-demo/build.gradle
+++ b/retrofit-springboot-demo/build.gradle
@@ -1,3 +1,4 @@
 dependencies {
+    compile('com.squareup.retrofit2:converter-jackson:2.2.0')
     compile project(':retrofit-springboot-autoconfigure')
 }
